Fix issues in Check